--- a/Homework12/templates/show_results.html
+++ b/Homework12/templates/show_results.html
@@ -7,10 +7,10 @@
 <body>
 <ul>
     {% for location in locations %}
-    <li>location.zip_code</li>
-    <li>location.address</li>
-    <li>location.latitude</li>
-    <li>location.longitude</li>
+    <li>{{ location.zip_code }}</li>
+    <li>{{ location.address }}</li>
+    <li>{{ location.latitude }}</li>
+    <li>{{ location.longitude }}</li>
     <li>--------------------</li>
     {% endfor %}
 </ul>
