--- a/Homework12/templates/result.html
+++ b/Homework12/templates/result.html
@@ -7,8 +7,8 @@
 <body>
     <p>Zip-code: {{ zip_code }}</p>
     <p>Address: {{ address }}</p>
-    <p>Latitude: {{ latitude }}</p>
-    <p>Longitude: {{ longitude }}</p>
+    <p>Latitude: {{ lat }}</p>
+    <p>Longitude: {{ long }}</p>
 
 </body>
 </html>
